ds: make use of java 11 Files.read/writeString